--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,8 +33,6 @@ h1 {
 }
 
 h2 {
-    font-weight: $font-bold;
-    color: #5491CD;
     font-size: 1.4em;
 }
 
@@ -43,12 +41,34 @@ h3 {
     font-weight: $font-bold;
 }
 
-.container {
-    max-width: 90%;
-    margin: 100px auto;
+header {
+    margin-bottom: 50px;
+}
+
+.header-title {
+    font-size: 3em;
+    margin-bottom: 0.7em;
+    letter-spacing: 5px;
+}
+
+.header-text {
+    width: 30%;
+    font-size: 0.8em;
+}
+
+.logo {
+    width: 20%;
+
+    img {
+        width: 100%;
+    }
 }
 
 .main-chart {
+    margin-bottom: 100px;
+}
+
+.main-chart-wrapper {
     width: 100%;
     height: 650px;
     position: relative;
@@ -62,19 +82,19 @@ h3 {
       height: 100%;
       position: absolute;
     }
+}
 
-    .wrapper {
-      width: 68%;
-      height: 68%;
-      position: absolute;
-      top: 54%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-         -moz-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-           -o-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%);
-    }
+.main-chart-container {
+  width: 68%;
+  height: 68%;
+  position: absolute;
+  top: 54%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+     -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 #mainchart {
@@ -104,8 +124,21 @@ h3 {
     }
 }
 
-.single-charts .row {
+.answer-group {
     margin-bottom: 2.8em;
+
+    &--title {
+        margin-bottom: 1.4em;
+    }
+
+    &--desc {
+        font-size: 0.8em;
+    }
+
+    h2 {
+        font-weight: $font-bold;
+        color: #5491CD;
+    }
 }
 
 .results-list {
@@ -124,6 +157,7 @@ h3 {
             margin: 0;
             text-align: center;
             flex-basis: 28%;
+            padding: 0 10px;
 
             em {
                 font-weight: normal;
