--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -256,15 +256,46 @@ body.printpdf #chart {
 }
 
 .legend-wrapper {
-    background: url(../images/legend.jpg) top left no-repeat;
+    //background: url(../images/legend.jpg) top left no-repeat;
     background-size: auto 250px;
     margin-top: 75px;
     margin-bottom: 7em;
-    padding: 0 0 50px 150px;
 
     > p {
-        height: 4em;
-        margin-bottom: 10px;
+        //height: 4em;
+        height: 75px;
+        margin-bottom: 0;
+        padding: 5px 0 0 100px;
+        position: relative;
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            border: 1px solid #ccc;
+            border-width: 1px 1px 0 1px;
+            width: 75px;
+            height: 75px;
+        }
+
+        &.legend-strong:before {
+            background-color: $topColor;
+        }
+
+        &.legend-med:before {
+            background-color: $medColor;
+        }
+
+        &.legend-low:before {
+            background-color: $lowColor;
+        }
+
+        &:last-child:before {
+            height: 40px;
+            border-width: 1px;
+        }
 
         @include media-breakpoint-down(sm) {
             body:not(.printpdf) & span {
@@ -276,6 +307,7 @@ body.printpdf #chart {
     strong {
         display: block;
     }
+
     span:not(:last-child){
         &:after {
             content: ",";
@@ -311,20 +343,27 @@ body.printpdf #chart {
 .results-list {
     list-style: none;
     margin: 0;
-    padding: 0;
 
     li {
         display: flex;
         flex-direction: row;
-        height: 2.8em;
+        //height: 2.8em;
         align-items: center;
         margin: 0 0 1.4em;
+        padding: 0 10px;
 
-        h3 {
+        .result-text,
+        > h3 {
+            flex-basis: 30%;
+        }
+
+        .result-text {
             margin: 0;
-            text-align: center;
-            flex-basis: 28%;
-            padding: 0 10px;
+            padding-right: 20px;
+
+            body.printpdf & p {
+                font-size: 0.9em;
+            }
 
             @include media-breakpoint-down(sm) {
                 body:not(.printpdf) & {
@@ -332,15 +371,19 @@ body.printpdf #chart {
                 }
             }
 
-            em {
-                font-weight: normal;
-            }
+            // em {
+            //     font-weight: normal;
+            // }
+        }
+
+        @include media-breakpoint-down(sm) {
+            display: block;
         }
     }
 }
 
 .result-value {
-    flex-basis: 72%;
+    flex-basis: 70%;
     //direction: rtl;
     background-color: #F6F6F6;
     height: 1.4em;
