init reduced ver

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -4,3 +4,7 @@ $font-bold: 700;
 $topColor: #8EBE82;
 $medColor: #FFF1B4;
 $lowColor: #F6AF95;
+
+$personasColor: #7ea5d7;
+$culturaColor: #b1dad0;
+$processColor: #6a76b7;
