--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,7 +20,7 @@ h1 {
     //padding: 1.4em 0;
     height: 160px;
     line-height: 160px;
-    margin-bottom: 1.4em;
+    margin: 2.8em 0 1.4em;
     //break-before: always;
     position: relative;
 
@@ -261,23 +261,46 @@ body.printpdf #chart {
     margin-top: 75px;
     margin-bottom: 7em;
 
-    > p {
+    svg {
+        margin-right: -200px;
+
+        body.lite & {
+            height: 100px;
+            width: auto;
+            margin-right: -90px;
+        }
+    }
+
+    figcaption,
+    svg {
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    p {
         //height: 4em;
         height: 75px;
         margin-bottom: 0;
-        padding: 5px 0 0 100px;
+        padding: 5px 0 0 210px;
         position: relative;
 
-        &:before {
-            content: "";
-            display: block;
-            position: absolute;
-            left: 0;
-            top: 0;
-            border: 1px solid #ccc;
-            border-width: 1px 1px 0 1px;
-            width: 75px;
-            height: 75px;
+        body:not(.lite) & {
+            &:before {
+                content: "";
+                display: block;
+                position: absolute;
+                left: 0;
+                top: 0;
+                border: 1px solid #ccc;
+                border-width: 1px 1px 0 1px;
+                width: 75px;
+                height: 75px;
+            }
+
+            &:last-child:before {
+                height: 40px;
+                border-width: 1px;
+            }
         }
 
         &.legend-strong:before {
@@ -292,12 +315,14 @@ body.printpdf #chart {
             background-color: $lowColor;
         }
 
-        &:last-child:before {
-            height: 40px;
-            border-width: 1px;
-        }
-
         @include media-breakpoint-down(sm) {
+            padding: 5px 0  0 100px;
+
+            body.lite & {
+                font-size: 0.6em;
+                height: auto;
+            }
+
             body:not(.printpdf) & span {
                 font-size: 0.6em;
             }
@@ -325,6 +350,10 @@ body.printpdf #chart {
 
     &--title {
         margin-bottom: 1.4em;
+    }
+
+    body.lite & p {
+        padding: 0 15px;
     }
 
     body.printpdf &--desc,
